# Rust-OS

./: .dockerignore  Cargo.toml  Dockerfile  Makefile
src/: gdt.rs  interrupts.rs  lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
