[package]
name = "os"
version = "0.1.0"
authors = ["Aidan Beggs <nadiasggeb001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"
x86_64 = "0.14.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
